--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(FastBelt)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 # this is where `brew install boost-mpi` installs things, withoit this line, there will be something likes `fatal error: 'boost/mpi.hpp' file not found`
 include_directories("/usr/local/include")
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/3rdParty)
 
 # file(GLOB SRC 
 #   "*cpp*"
@@ -26,3 +27,13 @@ target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
 find_package(MPI REQUIRED)
 include_directories(${MPI_CXX_INCLUDE_PATH})
 target_link_libraries(${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
+
+find_package(OpenGL REQUIRED)
+find_package(GLEW REQUIRED)
+find_package(glfw3 3.3 REQUIRED)
+target_link_libraries(
+  ${PROJECT_NAME}
+  ${OPENGL_gl_LIBRARY}
+  ${GLEW_LIBRARIES}
+  glfw
+)
