feat: sent data to worker thread but it is slow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
     "variant": "cpp",
     "vector": "cpp",
     "__hash_table": "cpp",
-    "unordered_map": "cpp"
+    "unordered_map": "cpp",
+    "*.ipp": "cpp"
   }
 }
